--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -60,6 +60,10 @@ getName()						getId()
 4. 프록시 객체는 생성된 실제 엔티티 객체의 참조를 target 멤버 변수에 보관
 5. 프록시 객체는 실제 엔티티 객체의 getName을 호출해서 결과를 반환
 
+### 프록시의 특징
+
+* 
+
 
 
 
@@ -91,7 +95,7 @@ fi
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTAxMjU3Nzc4NywxMzU2OTk3ODEzLDIwOT
+eyJoaXN0b3J5IjpbMTQyNzQ5NjIyOSwxMzU2OTk3ODEzLDIwOT
 MwMTg2OTUsLTc5MjA1NDA1NiwxMTk3MDUyODE5LDExMjg0MDM2
 MTMsLTE0MDQxMzkwMzVdfQ==
 -->
