JPA/8.proxy.md updated from https://stackedit.io/

--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -62,7 +62,7 @@ getName()						getId()
 
 ### 프록시의 특징
 
-* 
+* 프록시
 
 
 
@@ -95,7 +95,7 @@ fi
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQyNzQ5NjIyOSwxMzU2OTk3ODEzLDIwOT
+eyJoaXN0b3J5IjpbMTQwNzQ5Njg4OCwxMzU2OTk3ODEzLDIwOT
 MwMTg2OTUsLTc5MjA1NDA1NiwxMTk3MDUyODE5LDExMjg0MDM2
 MTMsLTE0MDQxMzkwMzVdfQ==
 -->
