--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -62,7 +62,9 @@ getName()						getId()
 
 ### 프록시의 특징
 
-* 프록시 객체는 
+* 프록시 객체가 실제 엔티티로 바뀌지 않음 -> 초기화 이후에도 프록시 객체를 통해 실제 엔티티에 접근
+* 프록시 객체는 원본 엔티티를 상속받은 객체이므로 타입 체크 시 주의(?)
+* 
 
 
 
@@ -95,7 +97,7 @@ fi
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyNzE1OTE0ODMsMTM1Njk5NzgxMywyMD
-kzMDE4Njk1LC03OTIwNTQwNTYsMTE5NzA1MjgxOSwxMTI4NDAz
-NjEzLC0xNDA0MTM5MDM1XX0=
+eyJoaXN0b3J5IjpbLTY1ODkzMTA4NywxMzU2OTk3ODEzLDIwOT
+MwMTg2OTUsLTc5MjA1NDA1NiwxMTk3MDUyODE5LDExMjg0MDM2
+MTMsLTE0MDQxMzkwMzVdfQ==
 -->
