--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -65,7 +65,9 @@ getName()						getId()
 * 프록시 객체가 실제 엔티티로 바뀌지 않음 -> **초기화 이후에도 프록시 객체를 통해 실제 엔티티에 접근**
 * 프록시 객체는 원본 엔티티를 상속받은 객체이므로 **타입 체크 시 주의**
 * 영속성 컨텍스트에 찾는 엔티티가 **이미 존재**하면 em.getReference()를 호출해도 프록시가 아닌 **실제 엔티티가 반환**
-* 영속성 컨텍스트의 도움을 받을 수 없는 준영속 상태의 프록시를 초기화 시 문제 발생
+* 영속성 컨텍스트의 도움을 받을 수 없는 **준영속 상태의 프록시를 초기화 시 문제 발생**
+
+### 
 
 
 
@@ -98,7 +100,7 @@ fi
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1NzMyNjg3MDYsMTM1Njk5NzgxMywyMD
-kzMDE4Njk1LC03OTIwNTQwNTYsMTE5NzA1MjgxOSwxMTI4NDAz
-NjEzLC0xNDA0MTM5MDM1XX0=
+eyJoaXN0b3J5IjpbLTE2NTAyOTg1OSwxMzU2OTk3ODEzLDIwOT
+MwMTg2OTUsLTc5MjA1NDA1NiwxMTk3MDUyODE5LDExMjg0MDM2
+MTMsLTE0MDQxMzkwMzVdfQ==
 -->
