JPA/8.proxy.md updated from https://stackedit.io/

--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -67,40 +67,16 @@ getName()						getId()
 * 영속성 컨텍스트에 찾는 엔티티가 **이미 존재**하면 em.getReference()를 호출해도 프록시가 아닌 **실제 엔티티가 반환**
 * 영속성 컨텍스트의 도움을 받을 수 없는 **준영속 상태의 프록시를 초기화 시 문제 발생**
 
-### 
+### 프록시와 식별자
 
-
-
-
-```bash
-#aldkfjalsdjfalskdf
-sleep 10
-tmboot -T
-if [ "$HOME" = "" ];then
-fi
-
-```
-
-* asdfjladsf `lajsdflkjas` asldkfjadslkfj 
 * 
 
-| wpahr | gkgkgk|
-|--:|--|
-| rkskek | alskdfsd
-| adsf|
-|asfasdadsfasdf | asdfsdf
+### 프록시 확인
 
-> asdfaldkfjasldf
-> 
+# 8.2 즉시 로딩과 지연 로딩
 
-* [ ] sdfasdf
-* [x] asdfasdf	
-	* [ ] asdfasdf
-		* [x] asdf	
-
-> Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2NTAyOTg1OSwxMzU2OTk3ODEzLDIwOT
-MwMTg2OTUsLTc5MjA1NDA1NiwxMTk3MDUyODE5LDExMjg0MDM2
-MTMsLTE0MDQxMzkwMzVdfQ==
+eyJoaXN0b3J5IjpbLTEzNjQzNDgwODAsLTE2NTAyOTg1OSwxMz
+U2OTk3ODEzLDIwOTMwMTg2OTUsLTc5MjA1NDA1NiwxMTk3MDUy
+ODE5LDExMjg0MDM2MTMsLTE0MDQxMzkwMzVdfQ==
 -->
