JPA/8.proxy.md updated from https://stackedit.io/

--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -73,10 +73,12 @@ getName()						getId()
 
 ### 프록시 확인
 
+* PersistenceUnitUtil.isLoaded(Object entity) 메소드
+
 # 8.2 즉시 로딩과 지연 로딩
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzNjQzNDgwODAsLTE2NTAyOTg1OSwxMz
-U2OTk3ODEzLDIwOTMwMTg2OTUsLTc5MjA1NDA1NiwxMTk3MDUy
-ODE5LDExMjg0MDM2MTMsLTE0MDQxMzkwMzVdfQ==
+eyJoaXN0b3J5IjpbMTg1OTEzNzY4OSwtMTY1MDI5ODU5LDEzNT
+Y5OTc4MTMsMjA5MzAxODY5NSwtNzkyMDU0MDU2LDExOTcwNTI4
+MTksMTEyODQwMzYxMywtMTQwNDEzOTAzNV19
 -->
