--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -74,11 +74,15 @@ getName()						getId()
 ### 프록시 확인
 
 * PersistenceUnitUtil.isLoaded(Object entity) 메소드
+	* 프록시 인스턴스의 초기화 여부 확인 가능
+```java
+boolean isLoad = emf.getPersistenceUnitUtil.isLoaded(entity);
+```
 
 # 8.2 즉시 로딩과 지연 로딩
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg1OTEzNzY4OSwtMTY1MDI5ODU5LDEzNT
-Y5OTc4MTMsMjA5MzAxODY5NSwtNzkyMDU0MDU2LDExOTcwNTI4
-MTksMTEyODQwMzYxMywtMTQwNDEzOTAzNV19
+eyJoaXN0b3J5IjpbLTIxMDE5NDM3NDAsLTE2NTAyOTg1OSwxMz
+U2OTk3ODEzLDIwOTMwMTg2OTUsLTc5MjA1NDA1NiwxMTk3MDUy
+ODE5LDExMjg0MDM2MTMsLTE0MDQxMzkwMzVdfQ==
 -->
