JPA/8.proxy.md updated from https://stackedit.io/

--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -69,7 +69,7 @@ getName()						getId()
 
 ### 프록시와 식별자
 
-* 
+* 엔티티를 프록시로 조회시 식별자(PK)값을
 
 ### 프록시 확인
 
@@ -82,7 +82,7 @@ boolean isLoad = emf.getPersistenceUnitUtil.isLoaded(entity);
 # 8.2 즉시 로딩과 지연 로딩
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIxMDE5NDM3NDAsLTE2NTAyOTg1OSwxMz
-U2OTk3ODEzLDIwOTMwMTg2OTUsLTc5MjA1NDA1NiwxMTk3MDUy
-ODE5LDExMjg0MDM2MTMsLTE0MDQxMzkwMzVdfQ==
+eyJoaXN0b3J5IjpbMTI3NzIwOTgxNiwtMTY1MDI5ODU5LDEzNT
+Y5OTc4MTMsMjA5MzAxODY5NSwtNzkyMDU0MDU2LDExOTcwNTI4
+MTksMTEyODQwMzYxMywtMTQwNDEzOTAzNV19
 -->
