--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -69,7 +69,7 @@ getName()						getId()
 
 ### 프록시와 식별자
 
-* 엔티티를 프록시로 조회시 식별자(PK) 값을 파라키터로 전달하는데 프록시 객체는 이 식별자 값을 보관한다.
+* 엔티티를 프록시로 조회시 식별자(PK) 값을 파라키터로 전달하는데 프록시 객체는 이 식별자 값을 보관
 
 ### 프록시 확인
 
@@ -82,7 +82,8 @@ boolean isLoad = emf.getPersistenceUnitUtil.isLoaded(entity);
 # 8.2 즉시 로딩과 지연 로딩
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyNDA0NjMzNjcsLTE2NTAyOTg1OSwxMz
-U2OTk3ODEzLDIwOTMwMTg2OTUsLTc5MjA1NDA1NiwxMTk3MDUy
-ODE5LDExMjg0MDM2MTMsLTE0MDQxMzkwMzVdfQ==
+eyJoaXN0b3J5IjpbMTEzNTc3NzkwMywtMTI0MDQ2MzM2NywtMT
+Y1MDI5ODU5LDEzNTY5OTc4MTMsMjA5MzAxODY5NSwtNzkyMDU0
+MDU2LDExOTcwNTI4MTksMTEyODQwMzYxMywtMTQwNDEzOTAzNV
+19
 -->
