--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -70,7 +70,7 @@ getName()						getId()
 ### 프록시와 식별자
 
 * 엔티티를 프록시로 조회시 식별자(PK) 값을 파라키터로 전달하는데 프록시 객체는 이 식별자 값을 보관
-	* 따라서 식별자 값을 조회하는 team.getId()를 호출해도 프록시는 초기화 되지 않음 (단, )
+	* 따라서 식별자 값을 조회하는 team.getId()를 호출해도 프록시는 초기화 되지 않음 (단, @Access(AcessType.PROPERTY)일 경우에만)
 
 ### 프록시 확인
 
@@ -83,8 +83,8 @@ boolean isLoad = emf.getPersistenceUnitUtil.isLoaded(entity);
 # 8.2 즉시 로딩과 지연 로딩
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzE2MjMxODUzLDExMzU3Nzc5MDMsLTEyND
-A0NjMzNjcsLTE2NTAyOTg1OSwxMzU2OTk3ODEzLDIwOTMwMTg2
-OTUsLTc5MjA1NDA1NiwxMTk3MDUyODE5LDExMjg0MDM2MTMsLT
-E0MDQxMzkwMzVdfQ==
+eyJoaXN0b3J5IjpbMTMzNjY4Mjk3NywxMTM1Nzc3OTAzLC0xMj
+QwNDYzMzY3LC0xNjUwMjk4NTksMTM1Njk5NzgxMywyMDkzMDE4
+Njk1LC03OTIwNTQwNTYsMTE5NzA1MjgxOSwxMTI4NDAzNjEzLC
+0xNDA0MTM5MDM1XX0=
 -->
