JPA/8.proxy.md updated from https://stackedit.io/

--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -83,8 +83,17 @@ boolean isLoad = emf.getPersistenceUnitUtil.isLoaded(entity);
 
 # 8.2 즉시 로딩과 지연 로딩
 
+### 즉시 로딩
+
+* 설정 방법
+```
+@M무ㅛTㅐMㅁ
+```
+
+### 지연 로딩
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTgxNjQ4OTY0MCwxMTM1Nzc3OTAzLC0xMj
+eyJoaXN0b3J5IjpbMTQ1OTQ3MDM5OCwxMTM1Nzc3OTAzLC0xMj
 QwNDYzMzY3LC0xNjUwMjk4NTksMTM1Njk5NzgxMywyMDkzMDE4
 Njk1LC03OTIwNTQwNTYsMTE5NzA1MjgxOSwxMTI4NDAzNjEzLC
 0xNDA0MTM5MDM1XX0=
