--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -86,14 +86,19 @@ boolean isLoad = emf.getPersistenceUnitUtil.isLoaded(entity);
 ### 즉시 로딩
 
 * 설정 방법
-```
-@M무ㅛTㅐMㅁ
+```java
+@ManyToOne(fetch = FetchType.EAGER)
 ```
 
 ### 지연 로딩
 
+* 설정 방법
+```java
+@ManyToOne(fetch = FetchType.LAZY)
+```
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ1OTQ3MDM5OCwxMTM1Nzc3OTAzLC0xMj
+eyJoaXN0b3J5IjpbLTkzOTY0MjEyMywxMTM1Nzc3OTAzLC0xMj
 QwNDYzMzY3LC0xNjUwMjk4NTksMTM1Njk5NzgxMywyMDkzMDE4
 Njk1LC03OTIwNTQwNTYsMTE5NzA1MjgxOSwxMTI4NDAzNjEzLC
 0xNDA0MTM5MDM1XX0=
