JPA/8.proxy.md updated from https://stackedit.io/

--- a/JPA/8.proxy.md
+++ b/JPA/8.proxy.md
@@ -90,6 +90,9 @@ boolean isLoad = emf.getPersistenceUnitUtil.isLoaded(entity);
 @ManyToOne(fetch = FetchType.EAGER)
 ```
 
+* 대부분의 JPA 구현체는 즉시 로딩을 최적화하기 위해 가능하면 조인 쿼리를 사용한다
+* NULL 제약조건과 JPA 조인 전략
+
 ### 지연 로딩
 
 * 설정 방법
@@ -98,8 +101,8 @@ boolean isLoad = emf.getPersistenceUnitUtil.isLoaded(entity);
 ```
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTkzOTY0MjEyMywxMTM1Nzc3OTAzLC0xMj
-QwNDYzMzY3LC0xNjUwMjk4NTksMTM1Njk5NzgxMywyMDkzMDE4
-Njk1LC03OTIwNTQwNTYsMTE5NzA1MjgxOSwxMTI4NDAzNjEzLC
-0xNDA0MTM5MDM1XX0=
+eyJoaXN0b3J5IjpbLTExMjg2MjE5NzcsMTEzNTc3NzkwMywtMT
+I0MDQ2MzM2NywtMTY1MDI5ODU5LDEzNTY5OTc4MTMsMjA5MzAx
+ODY5NSwtNzkyMDU0MDU2LDExOTcwNTI4MTksMTEyODQwMzYxMy
+wtMTQwNDEzOTAzNV19
 -->
