--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -1,7 +1,14 @@
 
 
+## Intro
+
+ - JPA 데이터 타입
+	 - 엔티티 타입
+		 - @Entity 로 정의하는 객체
+	 - 값 타입
+		 - int, Integer
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbMTAwMTMyNTA5MSw3MzA5OTgxMTZdfQ==
 -->
