JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -5,10 +5,15 @@
  - JPA 데이터 타입
 	 - 엔티티 타입
 		 - @Entity 로 정의하는 객체
+		 - 식별자를 통해 지속적인 추적 가능
 	 - 값 타입
-		 - int, Integer
+		 - int, Integer, String 같은 자바 기본 타입이나 객체
+		 - 식별자가 업ㅂㅅ어서 추절 불가
+		 - 분류
+			 - 기본값 타입 (basic value type)
+				 - wkqk
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTAwMTMyNTA5MSw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbMTAyOTM1NjEzMiw3MzA5OTgxMTZdfQ==
 -->
