--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -11,9 +11,16 @@
 		 - 식별자가 업ㅂㅅ어서 추절 불가
 		 - 분류
 			 - 기본값 타입 (basic value type)
-				 - wkqk
+				 - 자바 기본 타입 (ex- int, double)
+				 - 레퍼 클래스 (ex - Integer)
+				 - String
+			 - 임베디드 타입 (Embedded type 복합 값 타입)
+				 - JPA 에서 사용자가 직접 정의한 값
+			 - 컬렉션 값 타입 (Collection value type)
+				 - 하나 이상의 값 타입을 저장할 때 사용
+@@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTAyOTM1NjEzMiw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbLTIwMTM5NDI5NCw3MzA5OTgxMTZdfQ==
 -->
