JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -8,7 +8,7 @@
 		 - 식별자를 통해 지속적인 추적 가능
 	 - 값 타입
 		 - int, Integer, String 같은 자바 기본 타입이나 객체
-		 - 식별자가 업ㅂㅅ어서 추절 불가
+		 - 식별자가 없어서 추적 불가
 		 - 분류
 			 - 기본값 타입 (basic value type)
 				 - 자바 기본 타입 (ex- int, double)
@@ -18,9 +18,10 @@
 				 - JPA 에서 사용자가 직접 정의한 값
 			 - 컬렉션 값 타입 (Collection value type)
 				 - 하나 이상의 값 타입을 저장할 때 사용
-@@
+## 9.1 기본값 타입
+- Member class에 int 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwMTM5NDI5NCw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbMTcwNjcxMjQ4Miw3MzA5OTgxMTZdfQ==
 -->
