--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -19,9 +19,14 @@
 			 - 컬렉션 값 타입 (Collection value type)
 				 - 하나 이상의 값 타입을 저장할 때 사용
 ## 9.1 기본값 타입
-- Member class에 int 
+- Member class에 int a, String b 가 선언되어 있는 경우
+	- Member 엔티티는 id 라는 식별자 값을 가지고 생명주기도 있음
+	- 값 타입인 a와 b는 식별자 값도 없고 Member 엔티티에 의존함
+		- Member 엔티티 삭제하면 a, b도 삭제됨
+	- 값 타입은 공유하면 안됨
+		- ex) 다른 Men
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTcwNjcxMjQ4Miw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbLTE0NTA2NjMxNDgsNzMwOTk4MTE2XX0=
 -->
