JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -24,9 +24,11 @@
 	- 값 타입인 a와 b는 식별자 값도 없고 Member 엔티티에 의존함
 		- Member 엔티티 삭제하면 a, b도 삭제됨
 	- 값 타입은 공유하면 안됨
-		- ex) 다른 Men
+		- ex) 다른 Member 엔티티의 a 나 b를 변경했을 때 현재 Member 엔티티의 a와 b가 같이 변경되면 안되므로 공유 금지
+		- 자바에서 int, double 같은 기본 타입 (primitive type) 은 절대 공유되지 않음 (assign 해도 값을 복사해서 저장)
+## 9.2 임베디드 타입 (복하
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0NTA2NjMxNDgsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbNzc2Mzc2NzUzLDczMDk5ODExNl19
 -->
