--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -26,9 +26,10 @@
 	- 값 타입은 공유하면 안됨
 		- ex) 다른 Member 엔티티의 a 나 b를 변경했을 때 현재 Member 엔티티의 a와 b가 같이 변경되면 안되므로 공유 금지
 		- 자바에서 int, double 같은 기본 타입 (primitive type) 은 절대 공유되지 않음 (assign 해도 값을 복사해서 저장)
-## 9.2 임베디드 타입 (복하
+## 9.2 임베디드 타입 (복합 값 타입)
+- 새로운 값 타입을 정의해서 사용하는 것
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzc2Mzc2NzUzLDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbLTY5Mjc5NjUxMSw3MzA5OTgxMTZdfQ==
 -->
