--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -28,8 +28,14 @@
 		- 자바에서 int, double 같은 기본 타입 (primitive type) 은 절대 공유되지 않음 (assign 해도 값을 복사해서 저장)
 ## 9.2 임베디드 타입 (복합 값 타입)
 - 새로운 값 타입을 정의해서 사용하는 것
+- ex)
+
+    @Entity
+    public class Member {
+	    @Id @GeneratedValue
 
 > Written with [StackEdit](https://stackedit.io/).
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTY5Mjc5NjUxMSw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbLTUxODUwMzcyOCw3MzA5OTgxMTZdfQ==
 -->
