--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -29,13 +29,18 @@
 ## 9.2 임베디드 타입 (복합 값 타입)
 - 새로운 값 타입을 정의해서 사용하는 것
 - ex)
-
     @Entity
     public class Member {
 	    @Id @GeneratedValue
+	    private Long id;
+	    private String name;
+	    @Embedded Period workPeriod; // 근무 기간
+		@Embedded Address homeAddress; // 집 주소
+	}
+
 
 > Written with [StackEdit](https://stackedit.io/).
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTUxODUwMzcyOCw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbMTA2Mjk3MzcwNSw3MzA5OTgxMTZdfQ==
 -->
