--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -29,7 +29,8 @@
 ## 9.2 임베디드 타입 (복합 값 타입)
 - 새로운 값 타입을 정의해서 사용하는 것
 - ex)
-   ``` @Entity
+   ```
+    @Entity
     public class Member {
 	    @Id @GeneratedValue
 	    private Long id;
@@ -39,10 +40,18 @@
 	    @Embedded Address homeAddress; // 집 주소
 	}
 	```
-
+	``` 
+	@Embeddable
+	public class Period {
+		@Temporal(TemporalType.DATE) java.util.Date startDate;
+		@Temporal(TemporalType.DATE) java.util.Date endDate;
+		// ...
+		
+	}
+	```
 
 > Written with [StackEdit](https://stackedit.io/).
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzc0NzExODExLDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbMTk3NDkzNzgzNSw3MzA5OTgxMTZdfQ==
 -->
