--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -29,7 +29,7 @@
 ## 9.2 임베디드 타입 (복합 값 타입)
 - 새로운 값 타입을 정의해서 사용하는 것
 - ex)
-   ```
+	``` 
     @Entity
     public class Member {
 	    @Id @GeneratedValue
@@ -45,13 +45,18 @@
 	public class Period {
 		@Temporal(TemporalType.DATE) java.util.Date startDate;
 		@Temporal(TemporalType.DATE) java.util.Date endDate;
-		// ...
-		
+
+		public boolean isWork(Date date) {
+			// .. 값 타입을 위한 메소드 정의
+		}
 	}
 	```
+		``` 
+		
+	```  
 
 > Written with [StackEdit](https://stackedit.io/).
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTk3NDkzNzgzNSw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbLTkxMDQ2NzU1Miw3MzA5OTgxMTZdfQ==
 -->
