JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -50,13 +50,21 @@
 			// .. 값 타입을 위한 메소드 정의
 		}
 	}
-	```
-		``` 
-		
-	```  
+	``` 
+	``` 
+	@Embeddable
+	public class Address {
+		@Column(name="city) // 매핑할 컬럼 정의 가능
+		private String city;
+		private String street;
+		private String zip
+	}
+	``` 
+
+		 
 
 > Written with [StackEdit](https://stackedit.io/).
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTkxMDQ2NzU1Miw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbMTA5MTI1NDAyMiw3MzA5OTgxMTZdfQ==
 -->
