JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -57,14 +57,21 @@
 		@Column(name="city) // 매핑할 컬럼 정의 가능
 		private String city;
 		private String street;
-		private String zip
+		private String zipcode;
+		// ...
 	}
 	``` 
+	- 이렇게 새로 정의한 값들은 재사용이 가능하고 응집도도 높음
+- 필요한 Annotation
+	- @Embeddable
+		- 값 타입을 정의하는 곳에 표시
+	- @Embedded
+		- 
 
 		 
 
 > Written with [StackEdit](https://stackedit.io/).
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTA5MTI1NDAyMiw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbODM4MDE2OTUzLDczMDk5ODExNl19
 -->
