JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -63,15 +63,17 @@
 	``` 
 	- 이렇게 새로 정의한 값들은 재사용이 가능하고 응집도도 높음
 - 필요한 Annotation
-	- @Embeddable
-		- 값 타입을 정의하는 곳에 표시
-	- @Embedded
-		- 
+	- **@Embeddable**
+		- 값 타입을 **정의하는 곳**에 표시
+	- **@Embedded**
+		- 값 타입을 **사용하는 곳**에 표시
+- 참고 : 하이버네이트는 임베디드 타입을 컴포넌트라고 부름
+### 9.2.1 임베디드 타입과 테이블 매핑
 
 		 
 
 > Written with [StackEdit](https://stackedit.io/).
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODM4MDE2OTUzLDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbLTk4NzUxNzc2OSw3MzA5OTgxMTZdfQ==
 -->
