--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -69,11 +69,12 @@
 		- 값 타입을 **사용하는 곳**에 표시
 - 참고 : 하이버네이트는 임베디드 타입을 컴포넌트라고 부름
 ### 9.2.1 임베디드 타입과 테이블 매핑
+![임베디드 타입 매핑](https://github.com/tatarobo/JPA/blob/master/JPA/image/pic1.png)
 
-		 
 
 > Written with [StackEdit](https://stackedit.io/).
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTk4NzUxNzc2OSw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbODY4MTUzNjY5LC05ODc1MTc3NjksNzMwOT
+k4MTE2XX0=
 -->
