--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -70,11 +70,12 @@
 - 참고 : 하이버네이트는 임베디드 타입을 컴포넌트라고 부름
 ### 9.2.1 임베디드 타입과 테이블 매핑
 ![임베디드 타입 매핑](https://github.com/tatarobo/JPA/blob/master/JPA/image/pic1.png)
-
+- 장점
+	- 객체와 테이블을 아주 세밀하게 연결 가능
 
 > Written with [StackEdit](https://stackedit.io/).
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODY4MTUzNjY5LC05ODc1MTc3NjksNzMwOT
-k4MTE2XX0=
+eyJoaXN0b3J5IjpbMTExMzcxNTEyMiw4NjgxNTM2NjksLTk4Nz
+UxNzc2OSw3MzA5OTgxMTZdfQ==
 -->
