--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -71,11 +71,15 @@
 ### 9.2.1 임베디드 타입과 테이블 매핑
 ![임베디드 타입 매핑](https://github.com/tatarobo/JPA/blob/master/JPA/image/pic1.png)
 - 장점
-	- 객체와 테이블을 아주 세밀하게 연결 가능
+	- 객체와 테이블을 아주 세밀하게 매핑 가능
+		- 잘 설계한 ORM app은 매핑한 테이블의 수보다 클래스의 수가 많다
+	- ORM 기능을 사용하지 않으면 보통 테이블 : 객체 = 1 : 1
+### 9.2.2 임베디드 타입과 연과관계
+- 임베디드 타입은 값 타입을 포함하거나 엔티티 참조 가능
 
 > Written with [StackEdit](https://stackedit.io/).
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTExMzcxNTEyMiw4NjgxNTM2NjksLTk4Nz
-UxNzc2OSw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbLTIwNjg1NDIyODksODY4MTUzNjY5LC05OD
+c1MTc3NjksNzMwOTk4MTE2XX0=
 -->
