--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -76,18 +76,15 @@
 	- ORM 기능을 사용하지 않으면 보통 테이블 : 객체 = 1 : 1
 ### 9.2.2 임베디드 타입과 연과관계
 - 임베디드 타입은 값 타입을 포함하거나 엔티티 참조 가능
-
+[임베디드 타입과 연관관계](https://github.com/tatarobo/JPA/blob/master/JPA/image/pic2.png)
 	``` 
 	@Embeddable
 	public class Address {
-		@Column(name="city) // 매핑할 컬럼 정의 가능
-		private String city;
-		private String street;
-		private String zipcode;
-		// ...
+	    @Embedded Address address;
+	    @Embedded PhoneNumber phone
 	}
 	``` 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyMTk1NDg4NzcsLTIwNjg1NDIyODksOD
-Y4MTUzNjY5LC05ODc1MTc3NjksNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbLTM5OTUwODA0NCwtMjA2ODU0MjI4OSw4Nj
+gxNTM2NjksLTk4NzUxNzc2OSw3MzA5OTgxMTZdfQ==
 -->
