--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -81,10 +81,30 @@
 	@Embeddable
 	public class Address {
 	    @Embedded Address address;
-	    @Embedded PhoneNumber phone
+	    @Embedded PhoneNumber phoneNumber;
+	}
+	
+	@Embeddable
+	public class Address {
+		@Column(name="city) // 매핑할 컬럼 정의 가능
+		private String city;
+		private String street;
+		@Embedded Zipcode zipcode;
+	}
+	
+	@Embeddable
+	public class Zipcode {
+		private String zip;
+		private String plusFour;
+	}
+	
+	@Embeddable
+	public class PhoneNumber {
+		private String areaCode;
+		private String lo;
 	}
 	``` 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTM5OTUwODA0NCwtMjA2ODU0MjI4OSw4Nj
-gxNTM2NjksLTk4NzUxNzc2OSw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbLTE4NzE3NzI4ODcsLTIwNjg1NDIyODksOD
+Y4MTUzNjY5LC05ODc1MTc3NjksNzMwOTk4MTE2XX0=
 -->
