JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -76,8 +76,7 @@
 	- ORM 기능을 사용하지 않으면 보통 테이블 : 객체 = 1 : 1
 ### 9.2.2 임베디드 타입과 연과관계
 - 임베디드 타입은 값 타입을 포함하거나 엔티티 참조 가능
-[임베디드 타입과 연관관계](https://github.com/tatarobo/JPA/blob/master/JPA/image/pic2.png)
-	``` 
+
 	@Embeddable
 	public class Address {
 	    @Embedded Address address;
@@ -101,10 +100,18 @@
 	@Embeddable
 	public class PhoneNumber {
 		private String areaCode;
-		private String lo;
+		private String localNumber;
+		@ManyToOne PhoneServiceProvider provider;
+	}
+	
+	@Entity
+	public class PhoneServiceProvider {
+		@Id String name;
 	}
 	``` 
+### 9.2.3 @AttributeOverride: 속정 재정의
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4NzE3NzI4ODcsLTIwNjg1NDIyODksOD
-Y4MTUzNjY5LC05ODc1MTc3NjksNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbLTMzNDY3NzAwNywtMjA2ODU0MjI4OSw4Nj
+gxNTM2NjksLTk4NzUxNzc2OSw3MzA5OTgxMTZdfQ==
 -->
