--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -76,7 +76,8 @@
 	- ORM 기능을 사용하지 않으면 보통 테이블 : 객체 = 1 : 1
 ### 9.2.2 임베디드 타입과 연과관계
 - 임베디드 타입은 값 타입을 포함하거나 엔티티 참조 가능
-
+![임베디드 타입과 연관관계](https://github.com/tatarobo/JPA/blob/master/JPA/image/pic2.png)
+    ``` 
 	@Embeddable
 	public class Address {
 	    @Embedded Address address;
@@ -110,8 +111,9 @@
 	}
 	``` 
 ### 9.2.3 @AttributeOverride: 속정 재정의
-
+- 임베디드 타입에 정의한 매핑정보 재정의 시 사용
+- 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTMzNDY3NzAwNywtMjA2ODU0MjI4OSw4Nj
-gxNTM2NjksLTk4NzUxNzc2OSw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbLTIwMTQzMzQ5NTUsLTIwNjg1NDIyODksOD
+Y4MTUzNjY5LC05ODc1MTc3NjksNzMwOTk4MTE2XX0=
 -->
