JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -78,8 +78,8 @@
 - 임베디드 타입은 값 타입을 포함하거나 엔티티 참조 가능
 ![임베디드 타입과 연관관계](https://github.com/tatarobo/JPA/blob/master/JPA/image/pic2.png)
     ``` 
-	@Embeddable
-	public class Address {
+	@Entity
+	public class Member {
 	    @Embedded Address address;
 	    @Embedded PhoneNumber phoneNumber;
 	}
@@ -112,8 +112,15 @@
 	``` 
 ### 9.2.3 @AttributeOverride: 속정 재정의
 - 임베디드 타입에 정의한 매핑정보 재정의 시 사용
-- 
+	``` 
+	@Entity
+	public class Member {
+	    @Embedded Address homeAddress;
+	    @Embedded
+	    @AttributeOverri
+	}
+	``` 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwMTQzMzQ5NTUsLTIwNjg1NDIyODksOD
-Y4MTUzNjY5LC05ODc1MTc3NjksNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbMTU2MTE5NjA4MywtMjA2ODU0MjI4OSw4Nj
+gxNTM2NjksLTk4NzUxNzc2OSw3MzA5OTgxMTZdfQ==
 -->
