JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -117,10 +117,15 @@
 	public class Member {
 	    @Embedded Address homeAddress;
 	    @Embedded
-	    @AttributeOverri
+	    @AttributeOverrides({
+		    @AttributeOverride(name="city", column=@Column(name="COMPANY_CITY")),
+		    @AttributeOverride(name="street", column=@Column(name="COMPANY_STREET")),
+		    @AttributeOverride(name="zipcode", column=@Column(name="COMPANY_ZIPCODE"))
+	    })
+	    Address homeAddress;
 	}
 	``` 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU2MTE5NjA4MywtMjA2ODU0MjI4OSw4Nj
+eyJoaXN0b3J5IjpbLTQzMTA2NTY3NywtMjA2ODU0MjI4OSw4Nj
 gxNTM2NjksLTk4NzUxNzc2OSw3MzA5OTgxMTZdfQ==
 -->
