--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -116,16 +116,19 @@
 	@Entity
 	public class Member {
 	    @Embedded Address homeAddress;
+	    
 	    @Embedded
 	    @AttributeOverrides({
 		    @AttributeOverride(name="city", column=@Column(name="COMPANY_CITY")),
 		    @AttributeOverride(name="street", column=@Column(name="COMPANY_STREET")),
 		    @AttributeOverride(name="zipcode", column=@Column(name="COMPANY_ZIPCODE"))
 	    })
-	    Address homeAddress;
+	    Address companyAddress;
 	}
 	``` 
+- 이러면 실제 DB 상에 city, street, zipcode 뿐만 아니라 COMPANY_CITY, COMPANY_STREET, COMPANY_ZIPCODE 컬럼까지 추가됨
+- @AttributeOverrides 는 엔티티
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQzMTA2NTY3NywtMjA2ODU0MjI4OSw4Nj
-gxNTM2NjksLTk4NzUxNzc2OSw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbNDcxODg3NjUxLC0yMDY4NTQyMjg5LDg2OD
+E1MzY2OSwtOTg3NTE3NzY5LDczMDk5ODExNl19
 -->
