JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -127,8 +127,13 @@
 	}
 	``` 
 - 이러면 실제 DB 상에 city, street, zipcode 뿐만 아니라 COMPANY_CITY, COMPANY_STREET, COMPANY_ZIPCODE 컬럼까지 추가됨
-- @AttributeOverrides 는 엔티티
+- **@AttributeOverrides 는 엔티티에 설정해야 한다**
+	- *임베디드 타입이 임베디드 타입을 가지고 있어도 엔티티에 설정해야 한다*
+### 9.2.4 임베디드 타입과 null
+- 임베디드 타입이 null 이면 매핑한 컬럼 값 모두 null이 됨
+## 9.3 값 타입과 불변 객체
+@
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDcxODg3NjUxLC0yMDY4NTQyMjg5LDg2OD
-E1MzY2OSwtOTg3NTE3NzY5LDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbMTQwMjc2NzgzNywtMjA2ODU0MjI4OSw4Nj
+gxNTM2NjksLTk4NzUxNzc2OSw3MzA5OTgxMTZdfQ==
 -->
