JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -132,8 +132,13 @@
 ### 9.2.4 임베디드 타입과 null
 - 임베디드 타입이 null 이면 매핑한 컬럼 값 모두 null이 됨
 ## 9.3 값 타입과 불변 객체
-@
+### 9.3.1 값 타입 공유 참조
+- Member1 과 Member2 가 같은 Address 임베디드 타입 인스턴스를 참조하면 위험함
+- ex)
+	``` 
+	member1.setHomeAddress(new Address("oldCity
+	``` 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQwMjc2NzgzNywtMjA2ODU0MjI4OSw4Nj
-gxNTM2NjksLTk4NzUxNzc2OSw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbMTczMTY1OTU2LC0yMDY4NTQyMjg5LDg2OD
+E1MzY2OSwtOTg3NTE3NzY5LDczMDk5ODExNl19
 -->
