JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -136,9 +136,14 @@
 - Member1 과 Member2 가 같은 Address 임베디드 타입 인스턴스를 참조하면 위험함
 - ex)
 	``` 
-	member1.setHomeAddress(new Address("oldCity
+	member1.setHomeAddress(new Address("oldCity"));
+	Address address = member1.getHomeAddress();
+	
+	address.setCity("newCity"); // Member1의 address 값을 공유해서 사용
+	member2.setHomeAddress(address);
 	``` 
+	- 이렇게 되면 Member2와 Member1의 address 값이 모두 newCity가 된다
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTczMTY1OTU2LC0yMDY4NTQyMjg5LDg2OD
-E1MzY2OSwtOTg3NTE3NzY5LDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbLTEwOTI0MDIyODgsLTIwNjg1NDIyODksOD
+Y4MTUzNjY5LC05ODc1MTc3NjksNzMwOTk4MTE2XX0=
 -->
