JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -142,8 +142,13 @@
 	address.setCity("newCity"); // Member1의 address 값을 공유해서 사용
 	member2.setHomeAddress(address);
 	``` 
-	- 이렇게 되면 Member2와 Member1의 address 값이 모두 newCity가 된다
+	- **이렇게 되면 Member2와 Member1의 address 값이 모두 newCity가 된다**
+	- 이유 : 영속성 컨텍스트가 Member1과 Member2 둘 다 city 속성이 변경된 것으로 파악
+### 9.3.2 값 타입 복사
+- 값 타입 공유 대신 복사 사용 권장
+- ex)
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwOTI0MDIyODgsLTIwNjg1NDIyODksOD
-Y4MTUzNjY5LC05ODc1MTc3NjksNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbLTE2NDAxOTYxNCwtMjA2ODU0MjI4OSw4Nj
+gxNTM2NjksLTk4NzUxNzc2OSw3MzA5OTgxMTZdfQ==
 -->
