JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -147,8 +147,16 @@
 ### 9.3.2 값 타입 복사
 - 값 타입 공유 대신 복사 사용 권장
 - ex)
-
+	``` 
+	member1.setHomeAddress(new Address("oldCity"));
+	Address address = member1.getHomeAddress();
+	
+	Address newAddr = address.clone();
+	newAddr.setCity("newCity");
+	member2.setHomeAddress(newAddr);
+	``` 
+- Address의 ㄱㅇ
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2NDAxOTYxNCwtMjA2ODU0MjI4OSw4Nj
+eyJoaXN0b3J5IjpbMTc5MjQ1MzI0MSwtMjA2ODU0MjI4OSw4Nj
 gxNTM2NjksLTk4NzUxNzc2OSw3MzA5OTgxMTZdfQ==
 -->
