JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -155,8 +155,14 @@
 	newAddr.setCity("newCity");
 	member2.setHomeAddress(newAddr);
 	``` 
-- Address의 ㄱㅇ
+	- **Address는 객체이므로, 아래와 같이 할당하면 복사가 아니라 참조값을 전달하게 되는 것을 주의해야 함**
+	``` 
+	Address a = new Address("Old");
+	Address b = a;
+	``` 
+- 객체 공유 참조는 피할 수  없음
+	- 해결
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc5MjQ1MzI0MSwtMjA2ODU0MjI4OSw4Nj
-gxNTM2NjksLTk4NzUxNzc2OSw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbMTgzMDE4NDQ4LC0yMDY4NTQyMjg5LDg2OD
+E1MzY2OSwtOTg3NTE3NzY5LDczMDk5ODExNl19
 -->
