JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -160,9 +160,13 @@
 	Address a = new Address("Old");
 	Address b = a;
 	``` 
-- 객체 공유 참조는 피할 수  없음
-	- 해결
+- **객체 공유 참조는 피할 수  없음**
+	- 해결책 : 가장 단순한 방법은 객체의 값을 수정하지 못하게 함
+		- ex) setCity() 함수 제거
+### 9.3.3 불면 객체
+- 불변 객체로 만들면 값을 수정할 수  없으므로 부작용을 원천 차단 가능
+- 따라서, 가능한한 값 타입은 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTgzMDE4NDQ4LC0yMDY4NTQyMjg5LDg2OD
-E1MzY2OSwtOTg3NTE3NzY5LDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbLTU0MTE0MDAyNCwtMjA2ODU0MjI4OSw4Nj
+gxNTM2NjksLTk4NzUxNzc2OSw3MzA5OTgxMTZdfQ==
 -->
