JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -165,8 +165,15 @@
 		- ex) setCity() 함수 제거
 ### 9.3.3 불면 객체
 - 불변 객체로 만들면 값을 수정할 수  없으므로 부작용을 원천 차단 가능
-- 따라서, 가능한한 값 타입은 
+- 따라서, 가능한한 값 타입은 불변 객체로 설계해야 한다
+- 방법 : 생성자로만 값을 설정하고 수정자(setter)를 만들지 않음
+- 적용
+	``` 
+	Address addr = member1.getHomeAddress();
+	Address newaddr = ;
+	member2.setHomeAddress(newAddr);
+	``` 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTU0MTE0MDAyNCwtMjA2ODU0MjI4OSw4Nj
+eyJoaXN0b3J5IjpbLTE4MDE0MzY5OCwtMjA2ODU0MjI4OSw4Nj
 gxNTM2NjksLTk4NzUxNzc2OSw3MzA5OTgxMTZdfQ==
 -->
