--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -174,9 +174,12 @@
 	member2.setHomeAddress(newAddr);
 	``` 
 - 참고 : *Integer, String 은 자바가 제공하는 대표적인 불변 객체*
-## 9.
+## 9.4 값 타입의 비교
+- 비교
+	- 동일성 비교 (identity) : 인스턴스의 참조값 비교 (==)
+	- 동등성 비교 (equivalence) : 인스턴스
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTY3MzM3MjgwLC0xMjEzMDg4MzAzLC0yMD
-Y4NTQyMjg5LDg2ODE1MzY2OSwtOTg3NTE3NzY5LDczMDk5ODEx
-Nl19
+eyJoaXN0b3J5IjpbMTIwNTYwOTk0OCwtMTIxMzA4ODMwMywtMj
+A2ODU0MjI4OSw4NjgxNTM2NjksLTk4NzUxNzc2OSw3MzA5OTgx
+MTZdfQ==
 -->
