JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -177,9 +177,13 @@
 ## 9.4 값 타입의 비교
 - 비교
 	- 동일성 비교 (identity) : 인스턴스의 참조값 비교 (==)
-	- 동등성 비교 (equivalence) : 인스턴스
+	- 동등성 비교 (equivalence) : 인스턴스의 값을 비교 (equals())
+	- 참고
+		- equals() 를 재정의 하면 hashCode() 도 재정의 하는 것이 안전
+		- 그렇지 않으면 해시를 사용하는 컬렉션 (HashSet, HashMap) 이 정상동작하지 않음
+	- 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTIwNTYwOTk0OCwtMTIxMzA4ODMwMywtMj
+eyJoaXN0b3J5IjpbLTE1NDcyNzMzMiwtMTIxMzA4ODMwMywtMj
 A2ODU0MjI4OSw4NjgxNTM2NjksLTk4NzUxNzc2OSw3MzA5OTgx
 MTZdfQ==
 -->
