--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -181,9 +181,10 @@
 	- 참고
 		- equals() 를 재정의 하면 hashCode() 도 재정의 하는 것이 안전
 		- 그렇지 않으면 해시를 사용하는 컬렉션 (HashSet, HashMap) 이 정상동작하지 않음
-	- 
+## 9.5 값 타입 컬렉션
+- 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1NDcyNzMzMiwtMTIxMzA4ODMwMywtMj
+eyJoaXN0b3J5IjpbLTI3Mjg1NDc1OCwtMTIxMzA4ODMwMywtMj
 A2ODU0MjI4OSw4NjgxNTM2NjksLTk4NzUxNzc2OSw3MzA5OTgx
 MTZdfQ==
 -->
