--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -182,9 +182,19 @@
 		- equals() 를 재정의 하면 hashCode() 도 재정의 하는 것이 안전
 		- 그렇지 않으면 해시를 사용하는 컬렉션 (HashSet, HashMap) 이 정상동작하지 않음
 ## 9.5 값 타입 컬렉션
-- 
+- 값 타입을 하나 이상 저장하려면 컬렉션에 보관하고 **@ElementCollection, @CollectionTable** 어노테이션을 사용하면 됨
+	``` 
+    @Entity
+    public class Member {
+	    @Id @GeneratedValue
+	    private Long id;
+	    private String name;
+	    
+	    @Embedded Address homeAddress; // 집 주소
+	}
+	``` 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTI3Mjg1NDc1OCwtMTIxMzA4ODMwMywtMj
+eyJoaXN0b3J5IjpbLTI3MTc3NzcwOCwtMTIxMzA4ODMwMywtMj
 A2ODU0MjI4OSw4NjgxNTM2NjksLTk4NzUxNzc2OSw3MzA5OTgx
 MTZdfQ==
 -->
