JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -190,11 +190,15 @@
 	    private Long id;
 	    private String name;
 	    
-	    @Embedded Address homeAddress; // 집 주소
+	    @Embedded Address homeAddress;
+	    
+	    @CollectionTable(name = "FAVORITE_FOODS", joinColumns = @JoinColumn(name = "MEMBER_ID"))
+	    @Column(name = "FOOD_NAME")
+	    private List<Address> addressHistory = new ArrayList<add;
 	}
 	``` 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTI3MTc3NzcwOCwtMTIxMzA4ODMwMywtMj
+eyJoaXN0b3J5IjpbLTg0ODA1NTAwMywtMTIxMzA4ODMwMywtMj
 A2ODU0MjI4OSw4NjgxNTM2NjksLTk4NzUxNzc2OSw3MzA5OTgx
 MTZdfQ==
 -->
