JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -192,13 +192,19 @@
 	    
 	    @Embedded Address homeAddress;
 	    
+	    @ElementCollection
 	    @CollectionTable(name = "FAVORITE_FOODS", joinColumns = @JoinColumn(name = "MEMBER_ID"))
 	    @Column(name = "FOOD_NAME")
-	    private List<Address> addressHistory = new ArrayList<add;
+	    private Set<String > addressHistory = new ArrayList<Address>();
+	    
+	    @ElementCollection
+	    @CollectionTable(name = "ADDRESS", joinColumns = @JoinColumn(name = "MEMBER_ID"))
+	    private List<Address> addressHistory = new ArrayList<Address>();
+	    // ...
 	}
 	``` 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg0ODA1NTAwMywtMTIxMzA4ODMwMywtMj
-A2ODU0MjI4OSw4NjgxNTM2NjksLTk4NzUxNzc2OSw3MzA5OTgx
-MTZdfQ==
+eyJoaXN0b3J5IjpbMjE0OTY0MDc1LC0xMjEzMDg4MzAzLC0yMD
+Y4NTQyMjg5LDg2ODE1MzY2OSwtOTg3NTE3NzY5LDczMDk5ODEx
+Nl19
 -->
