JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -195,16 +195,27 @@
 	    @ElementCollection
 	    @CollectionTable(name = "FAVORITE_FOODS", joinColumns = @JoinColumn(name = "MEMBER_ID"))
 	    @Column(name = "FOOD_NAME")
-	    private Set<String > addressHistory = new ArrayList<Address>();
+	    private Set<String> favoriteFoods = new HashSet<String>();
 	    
 	    @ElementCollection
 	    @CollectionTable(name = "ADDRESS", joinColumns = @JoinColumn(name = "MEMBER_ID"))
 	    private List<Address> addressHistory = new ArrayList<Address>();
 	    // ...
 	}
+	
+	@Embeddable
+	public class Address {
+		@Column
+		private String city;
+		private String street;
+		private String zipcode;
+	}
 	``` 
+- Member : FAVORITE_FOOD = 1 : N
+- Member : ADDRESS = 1:N
+- 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjE0OTY0MDc1LC0xMjEzMDg4MzAzLC0yMD
-Y4NTQyMjg5LDg2ODE1MzY2OSwtOTg3NTE3NzY5LDczMDk5ODEx
-Nl19
+eyJoaXN0b3J5IjpbLTE5MTIxOTk2ODksLTEyMTMwODgzMDMsLT
+IwNjg1NDIyODksODY4MTUzNjY5LC05ODc1MTc3NjksNzMwOTk4
+MTE2XX0=
 -->
