--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -194,7 +194,7 @@
 	    
 	    @ElementCollection
 	    @CollectionTable(name = "FAVORITE_FOODS", joinColumns = @JoinColumn(name = "MEMBER_ID"))
-	    @Column(name = "FOOD_NAME")
+	    @Column(name = "FOOD_NAME") // 
 	    private Set<String> favoriteFoods = new HashSet<String>();
 	    
 	    @ElementCollection
@@ -215,7 +215,7 @@
 - Member : ADDRESS = 1:N
 - 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5MTIxOTk2ODksLTEyMTMwODgzMDMsLT
-IwNjg1NDIyODksODY4MTUzNjY5LC05ODc1MTc3NjksNzMwOTk4
-MTE2XX0=
+eyJoaXN0b3J5IjpbLTUzNDI3MTE0NSwtMTIxMzA4ODMwMywtMj
+A2ODU0MjI4OSw4NjgxNTM2NjksLTk4NzUxNzc2OSw3MzA5OTgx
+MTZdfQ==
 -->
