JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -194,7 +194,7 @@
 	    
 	    @ElementCollection
 	    @CollectionTable(name = "FAVORITE_FOODS", joinColumns = @JoinColumn(name = "MEMBER_ID"))
-	    @Column(name = "FOOD_NAME") // 
+	    @Column(name = "FOOD_NAME") // 값으로 사용되는 컬럼이 하나라서 @Column 을 사용해서 컬럼명 지정 가능
 	    private Set<String> favoriteFoods = new HashSet<String>();
 	    
 	    @ElementCollection
@@ -213,9 +213,9 @@
 	``` 
 - Member : FAVORITE_FOOD = 1 : N
 - Member : ADDRESS = 1:N
-- 
+- 테이블 매핑 정보
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTUzNDI3MTE0NSwtMTIxMzA4ODMwMywtMj
+eyJoaXN0b3J5IjpbMTYxOTE1MTg2NiwtMTIxMzA4ODMwMywtMj
 A2ODU0MjI4OSw4NjgxNTM2NjksLTk4NzUxNzc2OSw3MzA5OTgx
 MTZdfQ==
 -->
