JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -213,9 +213,13 @@
 	``` 
 - Member : FAVORITE_FOOD = 1 : N
 - Member : ADDRESS = 1:N
-- 테이블 매핑 정보
+- RDB의 테이블은 컬럼 안에 컬렉션을 넣을 수 없으므로, 별도의 테이블을 추가하고 @CollectionTable을 사용해서 추가한 테이블을 매핑해야 함
+- 테이블 매핑 정보는 @AttributeOverride 를 사용해서 재정의 가능
+- 참고
+	- @CollectionTable을 생략하면 기본값을 사용해서 매핑
+	- 기본값 : {엔티티이름}_{컬렉션 속성
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTYxOTE1MTg2NiwtMTIxMzA4ODMwMywtMj
-A2ODU0MjI4OSw4NjgxNTM2NjksLTk4NzUxNzc2OSw3MzA5OTgx
-MTZdfQ==
+eyJoaXN0b3J5IjpbLTE2MzU3ODI1NjYsLTEyMTMwODgzMDMsLT
+IwNjg1NDIyODksODY4MTUzNjY5LC05ODc1MTc3NjksNzMwOTk4
+MTE2XX0=
 -->
