JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -217,9 +217,12 @@
 - 테이블 매핑 정보는 @AttributeOverride 를 사용해서 재정의 가능
 - 참고
 	- @CollectionTable을 생략하면 기본값을 사용해서 매핑
-	- 기본값 : {엔티티이름}_{컬렉션 속성
+	- 기본값 : {엔티티이름}_{컬렉션 속성 이름}
+		- ex) Member 엔티티의 addressHistory는 Member_addressHistory 테이블과 매핑함
+### 9.5.1 값 타입 컬렉션
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2MzU3ODI1NjYsLTEyMTMwODgzMDMsLT
-IwNjg1NDIyODksODY4MTUzNjY5LC05ODc1MTc3NjksNzMwOTk4
-MTE2XX0=
+eyJoaXN0b3J5IjpbMTI0MzU1MjA5MCwtMTIxMzA4ODMwMywtMj
+A2ODU0MjI4OSw4NjgxNTM2NjksLTk4NzUxNzc2OSw3MzA5OTgx
+MTZdfQ==
 -->
