JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -220,9 +220,15 @@
 	- 기본값 : {엔티티이름}_{컬렉션 속성 이름}
 		- ex) Member 엔티티의 addressHistory는 Member_addressHistory 테이블과 매핑함
 ### 9.5.1 값 타입 컬렉션
+- ex)
+	``` 
+	// 임베디드 값 타입
+	member.setHomeAddress(new Address("통영", "몽돌해수욕장", "660-123");
 
+	// 기보ㄴ
+	``` 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI0MzU1MjA5MCwtMTIxMzA4ODMwMywtMj
+eyJoaXN0b3J5IjpbLTg4NTQ4MjA2MywtMTIxMzA4ODMwMywtMj
 A2ODU0MjI4OSw4NjgxNTM2NjksLTk4NzUxNzc2OSw3MzA5OTgx
 MTZdfQ==
 -->
