--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -225,10 +225,20 @@
 	// 임베디드 값 타입
 	member.setHomeAddress(new Address("통영", "몽돌해수욕장", "660-123");
 
-	// 기보ㄴ
+	// 기본값 타입 컬렉션
+	member.getFavoriteFoods().add("짬뽕");
+	member.getFavoriteFoods().add("짜장");
+	member.getFavoriteFoods().add("탕수육");
+
+	// 임베디드 값 타입 컬렉션
+	member.getAddressHistory().add(new Address("서울", "강남", "123-123");
+	member.getAddressHistory().add(new Address("서울", "강북", "000-000");
+
+	em.persist(member);
 	``` 
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg4NTQ4MjA2MywtMTIxMzA4ODMwMywtMj
-A2ODU0MjI4OSw4NjgxNTM2NjksLTk4NzUxNzc2OSw3MzA5OTgx
-MTZdfQ==
+eyJoaXN0b3J5IjpbLTEwMDkwMjI1NjEsLTEyMTMwODgzMDMsLT
+IwNjg1NDIyODksODY4MTUzNjY5LC05ODc1MTc3NjksNzMwOTk4
+MTE2XX0=
 -->
