JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -222,6 +222,8 @@
 ### 9.5.1 값 타입 컬렉션
 - ex)
 	``` 
+	Member member = new Member();
+
 	// 임베디드 값 타입
 	member.setHomeAddress(new Address("통영", "몽돌해수욕장", "660-123");
 
@@ -236,9 +238,13 @@
 
 	em.persist(member);
 	``` 
-
+	- **member 엔티티만 영속화 함**
+		- 이때 JPA는 member 엔티티의 값 타입도 함께 저장함
+	- 실제 실행 SQL
+		- member : INSERT SQL 1번
+		- member.homeAddress : 컬렉션이 아닌 임베디드 값 타입이므로 회원 테입
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwMDkwMjI1NjEsLTEyMTMwODgzMDMsLT
+eyJoaXN0b3J5IjpbLTE5MjI1Mzc2NDcsLTEyMTMwODgzMDMsLT
 IwNjg1NDIyODksODY4MTUzNjY5LC05ODc1MTc3NjksNzMwOTk4
 MTE2XX0=
 -->
