JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -242,9 +242,12 @@
 		- 이때 JPA는 member 엔티티의 값 타입도 함께 저장함
 	- 실제 실행 SQL
 		- member : INSERT SQL 1번
-		- member.homeAddress : 컬렉션이 아닌 임베디드 값 타입이므로 회원 테입
+		- member.homeAddress : 컬렉션이 아닌 **임베디드 값 타입**이므로 **회원 테이블을 저장하는 SQL 포함됨**
+		- member.getFavoriteFoods: INSERT SQL 3번
+		- member.getAddressHistory: INSERT SQL 2번
+	-	즉, em.persist(member) 호출 한번에 총 6개의 INSERT SQL 을 실행함
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5MjI1Mzc2NDcsLTEyMTMwODgzMDMsLT
-IwNjg1NDIyODksODY4MTUzNjY5LC05ODc1MTc3NjksNzMwOTk4
-MTE2XX0=
+eyJoaXN0b3J5IjpbLTY5MzczNjU1NywtMTIxMzA4ODMwMywtMj
+A2ODU0MjI4OSw4NjgxNTM2NjksLTk4NzUxNzc2OSw3MzA5OTgx
+MTZdfQ==
 -->
