--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -248,10 +248,10 @@
 	-	즉, em.persist(member) 호출 한번에 총 6개의 INSERT SQL 을 실행함
 -	참고
 	-	**값 타입 컬렉션은 영속성 전이 (cascade) + 고아 객체 제거 (orphan remove) 기능을 필수로 가짐**
-- 값 타입 컬렉션 조회 시에는 **LAZY** 가 기본 전략
+- 값 타입 컬렉션 조회 시에는 **LAZY** 가 *기본 전략*
 - 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2MDE2MDc1NjIsLTEyMTMwODgzMDMsLT
+eyJoaXN0b3J5IjpbLTEwOTg4MDk1MTYsLTEyMTMwODgzMDMsLT
 IwNjg1NDIyODksODY4MTUzNjY5LC05ODc1MTc3NjksNzMwOTk4
 MTE2XX0=
 -->
