JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -249,9 +249,14 @@
 -	참고
 	-	**값 타입 컬렉션은 영속성 전이 (cascade) + 고아 객체 제거 (orphan remove) 기능을 필수로 가짐**
 - 값 타입 컬렉션 조회 시에는 **LAZY** 가 *기본 전략*
-- 
+- 조회 예제
+	- ex1)
+	``` 
+	// SQL : SELECT ID, CITY, STREET, ZIPCODE FROM MEMBER WHERE ID = 1
+	Member member = 
+	``` 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwOTg4MDk1MTYsLTEyMTMwODgzMDMsLT
-IwNjg1NDIyODksODY4MTUzNjY5LC05ODc1MTc3NjksNzMwOTk4
-MTE2XX0=
+eyJoaXN0b3J5IjpbODA4MzU2MTkyLC0xMjEzMDg4MzAzLC0yMD
+Y4NTQyMjg5LDg2ODE1MzY2OSwtOTg3NTE3NzY5LDczMDk5ODEx
+Nl19
 -->
