JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -253,10 +253,20 @@
 	- ex1)
 	``` 
 	// SQL : SELECT ID, CITY, STREET, ZIPCODE FROM MEMBER WHERE ID = 1
-	Member member = 
+	Member member = em.find(Member.class, 1L); // 1. member
+
+	// 2. member.homeAddress
+	Address homeAddress = member.getHomeAddress();
+
+	// 3. member.favoriteFodds
+	Set<String> favoriteFoods = member.getFavoriteFoods(); //LAZY
+
+	// SQL : SELECT MEMBER_ID, FOOD_NAME FROM FAVORITE_FOODS
+	// WHERE MEMBER_ID = 1
+	
 	``` 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODA4MzU2MTkyLC0xMjEzMDg4MzAzLC0yMD
-Y4NTQyMjg5LDg2ODE1MzY2OSwtOTg3NTE3NzY5LDczMDk5ODEx
-Nl19
+eyJoaXN0b3J5IjpbLTU3NjI3NjEzOSwtMTIxMzA4ODMwMywtMj
+A2ODU0MjI4OSw4NjgxNTM2NjksLTk4NzUxNzc2OSw3MzA5OTgx
+MTZdfQ==
 -->
