JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -263,10 +263,18 @@
 
 	// SQL : SELECT MEMBER_ID, FOOD_NAME FROM FAVORITE_FOODS
 	// WHERE MEMBER_ID = 1
+	for (String favoriteFoord : favrotieFoods) {
+		System.out.println("favoriteFood = " + favoriteFood);
+	}
+
+	// 4. member.addressHistory
+	List<Address> addressHistory = member.getAddressHistory(); // LAZY
+
+	// SQL : SELECT MEMBER_ID, CITY, STREET, ZIPCODE FROM ADDRESS
 	
 	``` 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTU3NjI3NjEzOSwtMTIxMzA4ODMwMywtMj
-A2ODU0MjI4OSw4NjgxNTM2NjksLTk4NzUxNzc2OSw3MzA5OTgx
-MTZdfQ==
+eyJoaXN0b3J5IjpbLTExMTU2MzU5MDIsLTEyMTMwODgzMDMsLT
+IwNjg1NDIyODksODY4MTUzNjY5LC05ODc1MTc3NjksNzMwOTk4
+MTE2XX0=
 -->
