JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -271,10 +271,15 @@
 	List<Address> addressHistory = member.getAddressHistory(); // LAZY
 
 	// SQL : SELECT MEMBER_ID, CITY, STREET, ZIPCODE FROM ADDRESS
-	
+	// WHERE MEMBER_ID = 1
+	addressHistory.get(0);
 	``` 
+		- 실제 DB에 전달되는 SQL
+			- member : 회원만 조회. 임베디드 값인 homeAddress도 함께 조회
+			- member.homeAddress : 1번에서 회원을 조회할 때 같이 조회함
+			- member.favoriteFoods : LAZY로 설정해서 실제 컬렉션을 사용할 때 1번 호추
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExMTU2MzU5MDIsLTEyMTMwODgzMDMsLT
-IwNjg1NDIyODksODY4MTUzNjY5LC05ODc1MTc3NjksNzMwOTk4
-MTE2XX0=
+eyJoaXN0b3J5IjpbMTUxMjIxNjIwOCwtMTIxMzA4ODMwMywtMj
+A2ODU0MjI4OSw4NjgxNTM2NjksLTk4NzUxNzc2OSw3MzA5OTgx
+MTZdfQ==
 -->
