JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -250,7 +250,6 @@
 	-	**값 타입 컬렉션은 영속성 전이 (cascade) + 고아 객체 제거 (orphan remove) 기능을 필수로 가짐**
 - 값 타입 컬렉션 조회 시에는 **LAZY** 가 *기본 전략*
 - 조회 예제
-	- ex1)
 	``` 
 	// SQL : SELECT ID, CITY, STREET, ZIPCODE FROM MEMBER WHERE ID = 1
 	Member member = em.find(Member.class, 1L); // 1. member
@@ -274,12 +273,37 @@
 	// WHERE MEMBER_ID = 1
 	addressHistory.get(0);
 	``` 
-		- 실제 DB에 전달되는 SQL
-			- member : 회원만 조회. 임베디드 값인 homeAddress도 함께 조회
-			- member.homeAddress : 1번에서 회원을 조회할 때 같이 조회함
-			- member.favoriteFoods : LAZY로 설정해서 실제 컬렉션을 사용할 때 1번 호추
+	- 실제 DB에 전달되는 SQL
+		- member : 회원만 조회. 임베디드 값인 homeAddress도 함께 조회
+		- member.homeAddress : 1번에서 회원을 조회할 때 같이 조회함
+		- member.favoriteFoods : LAZY로 설정해서 실제 컬렉션을 사용할 때 1번 호출
+		- member.addressHistory : LAZY 로 설정해서 실제 컬렉션을 사용할 때 SELECT SQL을 1번 호출
+- 값을 수정하는 예제
+	``` 
+	// SQL : SELECT ID, CITY, STREET, ZIPCODE FROM MEMBER WHERE ID = 1
+	Member member = em.find(Member.class, 1L);
+
+	// 1. 임베디드 값 타입 수정
+	member.setA
+
+	// 3. member.favoriteFodds
+	Set<String> favoriteFoods = member.getFavoriteFoods(); //LAZY
+
+	// SQL : SELECT MEMBER_ID, FOOD_NAME FROM FAVORITE_FOODS
+	// WHERE MEMBER_ID = 1
+	for (String favoriteFoord : favrotieFoods) {
+		System.out.println("favoriteFood = " + favoriteFood);
+	}
+
+	// 4. member.addressHistory
+	List<Address> addressHistory = member.getAddressHistory(); // LAZY
+
+	// SQL : SELECT MEMBER_ID, CITY, STREET, ZIPCODE FROM ADDRESS
+	// WHERE MEMBER_ID = 1
+	addressHistory.get(0);
+	``` 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTUxMjIxNjIwOCwtMTIxMzA4ODMwMywtMj
+eyJoaXN0b3J5IjpbMTAyMDMwNzc0MSwtMTIxMzA4ODMwMywtMj
 A2ODU0MjI4OSw4NjgxNTM2NjksLTk4NzUxNzc2OSw3MzA5OTgx
 MTZdfQ==
 -->
