JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -284,26 +284,18 @@
 	Member member = em.find(Member.class, 1L);
 
 	// 1. 임베디드 값 타입 수정
-	member.setA
+	member.setHomeAddress(new Address("새로운 도시", "신도시1", "123456");
 
-	// 3. member.favoriteFodds
-	Set<String> favoriteFoods = member.getFavoriteFoods(); //LAZY
+	// 2. 기본값 타입 켈렉션 수정
+	Set<String> favoriteFoods = member.getFavoriteFoods();
+	favoriteFoods.remove("탕수육");
+	favoriteFoods.remove("치킨");
 
-	// SQL : SELECT MEMBER_ID, FOOD_NAME FROM FAVORITE_FOODS
-	// WHERE MEMBER_ID = 1
-	for (String favoriteFoord : favrotieFoods) {
-		System.out.println("favoriteFood = " + favoriteFood);
-	}
-
-	// 4. member.addressHistory
-	List<Address> addressHistory = member.getAddressHistory(); // LAZY
-
-	// SQL : SELECT MEMBER_ID, CITY, STREET, ZIPCODE FROM ADDRESS
-	// WHERE MEMBER_ID = 1
-	addressHistory.get(0);
+	// 3. 임베디드 값 타입 컬렉션 수정
+	List<Address> addressHistory = member.getAddressHistory();
 	``` 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTAyMDMwNzc0MSwtMTIxMzA4ODMwMywtMj
-A2ODU0MjI4OSw4NjgxNTM2NjksLTk4NzUxNzc2OSw3MzA5OTgx
-MTZdfQ==
+eyJoaXN0b3J5IjpbLTIwMjM1NjM0MzEsLTEyMTMwODgzMDMsLT
+IwNjg1NDIyODksODY4MTUzNjY5LC05ODc1MTc3NjksNzMwOTk4
+MTE2XX0=
 -->
