JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -293,9 +293,15 @@
 
 	// 3. 임베디드 값 타입 컬렉션 수정
 	List<Address> addressHistory = member.getAddressHistory();
+	addressHistory.remove(new Address("서울", "기존 주소", "123-123"));
+	addressHistory.add(new Address("새로운 도시", "새로운 주소", "123-456"));
 	``` 
+	- 임베디드 값 타입 수정
+		- 
+	- 기본값 타입 컬렉션 수정
+	- 임베디드 값 타입 컬렉션 수정
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwMjM1NjM0MzEsLTEyMTMwODgzMDMsLT
+eyJoaXN0b3J5IjpbLTEzMzY2NDIxODcsLTEyMTMwODgzMDMsLT
 IwNjg1NDIyODksODY4MTUzNjY5LC05ODc1MTc3NjksNzMwOTk4
 MTE2XX0=
 -->
