JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -297,11 +297,16 @@
 	addressHistory.add(new Address("새로운 도시", "새로운 주소", "123-456"));
 	``` 
 	- 임베디드 값 타입 수정
-		- 
+		- homeAddress 는 MEMBER 테이블과 매핑했으므로, Member 테이블만 UPDATE
+		- MEMBER 엔티티를 수정하는 것과 같음
 	- 기본값 타입 컬렉션 수정
 	- 임베디드 값 타입 컬렉션 수정
+		- 값 타입은 불변해야 함
+		- 그래서 기존 주소 삭제 후 새로운 주소 등록
+### 9.5.2 값 타입 컬렉션의 제약사항
+- 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzMzY2NDIxODcsLTEyMTMwODgzMDMsLT
+eyJoaXN0b3J5IjpbLTIwNTIwNTI1NjAsLTEyMTMwODgzMDMsLT
 IwNjg1NDIyODksODY4MTUzNjY5LC05ODc1MTc3NjksNzMwOTk4
 MTE2XX0=
 -->
