JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -304,9 +304,10 @@
 		- 값 타입은 불변해야 함
 		- 그래서 기존 주소 삭제 후 새로운 주소 등록
 ### 9.5.2 값 타입 컬렉션의 제약사항
+- 값 타입 컬렉션에 변경 사항이 생기면 값 타입 컬렉션이 매핑된 테이블의 연관된 모든 데이터를 삭제하고 현재 값 타입 컬렉션에 있는 모든 값을 데이터베이스에 다시 저장해야 함
 - 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwNTIwNTI1NjAsLTEyMTMwODgzMDMsLT
-IwNjg1NDIyODksODY4MTUzNjY5LC05ODc1MTc3NjksNzMwOTk4
-MTE2XX0=
+eyJoaXN0b3J5IjpbLTU4NTU1OTg3NywtMjA1MjA1MjU2MCwtMT
+IxMzA4ODMwMywtMjA2ODU0MjI4OSw4NjgxNTM2NjksLTk4NzUx
+Nzc2OSw3MzA5OTgxMTZdfQ==
 -->
