--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -305,9 +305,14 @@
 		- 그래서 기존 주소 삭제 후 새로운 주소 등록
 ### 9.5.2 값 타입 컬렉션의 제약사항
 - 값 타입 컬렉션에 변경 사항이 생기면 값 타입 컬렉션이 매핑된 테이블의 연관된 모든 데이터를 삭제하고 현재 값 타입 컬렉션에 있는 모든 값을 데이터베이스에 다시 저장해야 함
-- 
+	- 컬렉션이 매핑된 테이블에 데이터가 많다면 값 타입 컬렉션 대신에 일대다 관계를 고려해야 함
+- 값 타입 컬렉션을 매핑하는 테이블은 모든 컬럼을 묶어서 기본키를 구성해야 함
+	- DB 기본키 제약 조건으로 인해
+		- 컬럼에 null을 입력할 수 없음
+		- 같은 값을 중복해서 저장할 수 없음
+	- 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTU4NTU1OTg3NywtMjA1MjA1MjU2MCwtMT
+eyJoaXN0b3J5IjpbLTY1NDE4MjE4MiwtMjA1MjA1MjU2MCwtMT
 IxMzA4ODMwMywtMjA2ODU0MjI4OSw4NjgxNTM2NjksLTk4NzUx
 Nzc2OSw3MzA5OTgxMTZdfQ==
 -->
