--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -310,9 +310,12 @@
 	- DB 기본키 제약 조건으로 인해
 		- 컬럼에 null을 입력할 수 없음
 		- 같은 값을 중복해서 저장할 수 없음
-	- 
+- 위의 문제를 해결하려면 새 엔티티를 만들어서 1:N 관계로 만드는 게 편함
+	- 여기에 추가로 cascade + orphan_remove 기능을 적용하면 됨
+- 참고
+	- 사용하는 컬렉션이나 조건에 따라 기본 키를 식별하지 못할 수도 있음
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTY1NDE4MjE4MiwtMjA1MjA1MjU2MCwtMT
+eyJoaXN0b3J5IjpbMTY1MzE0ODQyMSwtMjA1MjA1MjU2MCwtMT
 IxMzA4ODMwMywtMjA2ODU0MjI4OSw4NjgxNTM2NjksLTk4NzUx
 Nzc2OSw3MzA5OTgxMTZdfQ==
 -->
