JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -313,9 +313,17 @@
 - 위의 문제를 해결하려면 새 엔티티를 만들어서 1:N 관계로 만드는 게 편함
 	- 여기에 추가로 cascade + orphan_remove 기능을 적용하면 됨
 - 참고
-	- 사용하는 컬렉션이나 조건에 따라 기본 키를 식별하지 못할 수도 있음
+	- 값 타입 컬렉션을 변경했을 때, 사용하는 컬렉션이나 조건에 따라 기본 키를 식별하지 못할 수도 있음
+	- = 값 타입 컬렉션을 사용할 때는 모두 삭제하고 다시 저장하는 최악의 시나리오를 고려하면서 사용해야 함
+## 9.6 정리
+- 엔티티 타입
+	- 식별자(@ID) 가 있으며, 식별자로 구별 가능
+	- 생명주기가 있음 (생성/영속화/소멸)
+	- 
+- 값 타입
+	- 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTY1MzE0ODQyMSwtMjA1MjA1MjU2MCwtMT
-IxMzA4ODMwMywtMjA2ODU0MjI4OSw4NjgxNTM2NjksLTk4NzUx
-Nzc2OSw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbLTc1MzczNzA3LC0yMDUyMDUyNTYwLC0xMj
+EzMDg4MzAzLC0yMDY4NTQyMjg5LDg2ODE1MzY2OSwtOTg3NTE3
+NzY5LDczMDk5ODExNl19
 -->
