JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -319,11 +319,18 @@
 - 엔티티 타입
 	- 식별자(@ID) 가 있으며, 식별자로 구별 가능
 	- 생명주기가 있음 (생성/영속화/소멸)
-	- 
+		- em.persist / em.remove 로 영속화/제거 함
+	- 공유 가능
+		- 참조값 공유 가능 (공유 참조)
+		- ex) 회원 엔티티가 있으면, 다른 엔티티에서 얼마든지 참조 가능
 - 값 타입
-	- 
+	- 식별자가 없음
+	- 생명 주기를 엔티티에 의존
+	- 공유하지 않는 것이 안전
+		- 불변으로 만드는 것이 안전함
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc1MzczNzA3LC0yMDUyMDUyNTYwLC0xMj
+eyJoaXN0b3J5IjpbNjUyMzUzNTA0LC0yMDUyMDUyNTYwLC0xMj
 EzMDg4MzAzLC0yMDY4NTQyMjg5LDg2ODE1MzY2OSwtOTg3NTE3
 NzY5LDczMDk5ODExNl19
 -->
