JPA/9.valueType.md updated from https://stackedit.io/

--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -327,10 +327,13 @@
 	- 식별자가 없음
 	- 생명 주기를 엔티티에 의존
 	- 공유하지 않는 것이 안전
-		- 불변으로 만드는 것이 안전함
-
+		- *불변으로 만드는 것이 안전함*
+- **값 타입은 정말 값 타입이라 판단될 때만 사용해야 함**
+- 엔티티를 값 타입으로 만들면 안됨
+- 판단기준 : **식별자가 필요하고, 지속해서 값을 추적하고, 구분하고, 변경해야 한다면 엔티티**
+- 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjUyMzUzNTA0LC0yMDUyMDUyNTYwLC0xMj
-EzMDg4MzAzLC0yMDY4NTQyMjg5LDg2ODE1MzY2OSwtOTg3NTE3
-NzY5LDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbLTcxNzY4ODUyNSwtMjA1MjA1MjU2MCwtMT
+IxMzA4ODMwMywtMjA2ODU0MjI4OSw4NjgxNTM2NjksLTk4NzUx
+Nzc2OSw3MzA5OTgxMTZdfQ==
 -->
