JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -1,7 +1,12 @@
-
-
-
-> Written with [StackEdit](https://stackedit.io/).
+# 10. 객체지향 쿼리 언어
+## Intro
+- 객체지향 쿼리 소개
+- JPQL
+	- 가장 중요한 객체지향 쿼리 언어
+- Criteria
+- QueryDSL
+- 네이티브 SQL
+- 객체지향 쿼리 심화
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbLTg1Nzk5Nzc5Miw3MzA5OTgxMTZdfQ==
 -->
