JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -7,6 +7,9 @@
 - QueryDSL
 - 네이티브 SQL
 - 객체지향 쿼리 심화
+## 객체지향 쿼리 소개
+- 객체 조회 방법
+	- 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg1Nzk5Nzc5Miw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbMzUwMzc2MDEsNzMwOTk4MTE2XX0=
 -->
