JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -9,7 +9,9 @@
 - 객체지향 쿼리 심화
 ## 객체지향 쿼리 소개
 - 객체 조회 방법
-	- 
+	- 식별자로 조회 (EntityManager.find())
+	- 객체 그래프 탐색 (ex - a.getB().getC())
+- v
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzUwMzc2MDEsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbMjAxNzQzOTczOCw3MzA5OTgxMTZdfQ==
 -->
