--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -11,7 +11,10 @@
 - 객체 조회 방법
 	- 식별자로 조회 (EntityManager.find())
 	- 객체 그래프 탐색 (ex - a.getB().getC())
+- JPQL 특징
+	- 테이블이 아닌 **객체를 대상으로 검색**하는 객체지향 쿼리
+	- **SQL을 추상화해서 특정 DB SQL에 의존하지 않음**
 - 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjUyOTg0MzU2LDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbNDc5NTkwNzcyLDczMDk5ODExNl19
 -->
