JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -14,7 +14,14 @@
 - JPQL 특징
 	- 테이블이 아닌 **객체를 대상으로 검색**하는 객체지향 쿼리
 	- **SQL을 추상화해서 특정 DB SQL에 의존하지 않음**
+- JPA가 공식적으로 지원하는 기능들
+	- JPQL (Java Persistence Query Language)
+	- Criteria 쿼리 
+		- JPQL을 편하게 작성하도록 도와주는 API
+		- 빌더 클래스 모음
+	- 네이티브 SQL
+		- JPA에서 JPQL 대신 직접 SQL을 사용할 수 있음
 - 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDc5NTkwNzcyLDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbMzE2MjkyODExLDczMDk5ODExNl19
 -->
