--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -21,7 +21,9 @@
 		- 빌더 클래스 모음
 	- 네이티브 SQL
 		- JPA에서 JPQL 대신 직접 SQL을 사용할 수 있음
-- 
+- JPA에서 공식적으로 지원하진 않지만 알아둘 가치가 있는 기능들
+	- QueryDSL
+		- 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzE2MjkyODExLDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbNzYwNTg4MzIxLDczMDk5ODExNl19
 -->
