--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -23,7 +23,10 @@
 		- JPA에서 JPQL 대신 직접 SQL을 사용할 수 있음
 - JPA에서 공식적으로 지원하진 않지만 알아둘 가치가 있는 기능들
 	- QueryDSL
-		- 
+		- Criteria 같은 빌더 클래스 모음
+		- 비표준 오픈소스 프레임워크
+	- JDBC 직접 사용, MyBatis 같은 SQL 매퍼 프레임워크
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzYwNTg4MzIxLDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbLTE2NTI2MTM5ODUsNzMwOTk4MTE2XX0=
 -->
