JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -26,7 +26,12 @@
 		- Criteria 같은 빌더 클래스 모음
 		- 비표준 오픈소스 프레임워크
 	- JDBC 직접 사용, MyBatis 같은 SQL 매퍼 프레임워크
-
+### 10.1.1 JPQL 소개
+- 정의 : 엔티티 객체를 조회하는 객체지향 쿼리
+- 특징
+	- SQL을 추상화해서 특정 DB에 의존하지 않음
+	- 문법이 SQL과 비슷
+	- ANSI 표준 SQL이 제공하는 기능을 유사학
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2NTI2MTM5ODUsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbNDUzMzIzNjg2LDczMDk5ODExNl19
 -->
