JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -30,8 +30,12 @@
 - 정의 : 엔티티 객체를 조회하는 객체지향 쿼리
 - 특징
 	- SQL을 추상화해서 특정 DB에 의존하지 않음
+		- DB dialect (방언) 만 변경하면 JPQL을 수정하지 않아도 DB 변경 가능
+		- ex) DB 마다 문법이 다른 거라도 dialect 에 따라 맞춘 쿼리가 실행됨
 	- 문법이 SQL과 비슷
-	- ANSI 표준 SQL이 제공하는 기능을 유사학
+	- ANSI 표준 SQL이 제공하는 기능을 유사하게 지원
+	- SQL보다 간결함
+		- 엔티티 직접 조회, 묵시적 조인, 다형성 지원
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDUzMzIzNjg2LDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbMjAyMjEwMzk1Niw3MzA5OTgxMTZdfQ==
 -->
