--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -36,6 +36,19 @@
 	- ANSI 표준 SQL이 제공하는 기능을 유사하게 지원
 	- SQL보다 간결함
 		- 엔티티 직접 조회, 묵시적 조인, 다형성 지원
+- ex)
+```
+@Entity(name="Member")
+public class Member {
+	@Column(name = "name")
+	private String username;
+}
+```
+- JPQL 사용
+```
+// 쿼리 생성
+String jpql = "select m from
+```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjAyMjEwMzk1Niw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbMTc0NjIwMzIwOCw3MzA5OTgxMTZdfQ==
 -->
