--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -47,8 +47,9 @@ public class Member {
 - JPQL 사용
 ```
 // 쿼리 생성
-String jpql = "select m from
+String jpql = "select m from Member as m where m.username = 'kim'";
+List<Member> resultList = em.createQuery(jpql, Member.class).getResultList();
 ```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc0NjIwMzIwOCw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbMTU1ODYzODQxMSw3MzA5OTgxMTZdfQ==
 -->
