--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -50,6 +50,8 @@ public class Member {
 String jpql = "select m from Member as m where m.username = 'kim'";
 List<Member> resultList = em.createQuery(jpql, Member.class).getResultList();
 ```
+	- m.username 은 테이블 컬럼명이 아니라 엔티티 객체의 필드명
+	- em.createQuery()에 실행할 JPQL과 반환할 엔티티의 클래스 타입인 Member.class를 넘겨주고 getResultList() 메소드를 실행하면 JPA는 JPQL을 SQL로 변환해서 DB를
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU1ODYzODQxMSw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbLTg0ODMwMzAzNCw3MzA5OTgxMTZdfQ==
 -->
