--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -37,21 +37,27 @@
 	- SQL보다 간결함
 		- 엔티티 직접 조회, 묵시적 조인, 다형성 지원
 - ex)
-```
-@Entity(name="Member")
-public class Member {
-	@Column(name = "name")
-	private String username;
-}
-```
+	```
+	@Entity(name="Member")
+	public class Member {
+		@Column(name = "name")
+		private String username;
+	}
+	```
 - JPQL 사용
-```
-// 쿼리 생성
-String jpql = "select m from Member as m where m.username = 'kim'";
-List<Member> resultList = em.createQuery(jpql, Member.class).getResultList();
-```
+	```
+	// 쿼리 생성
+	String jpql = "select m from Member as m where m.username = 'kim'";
+	List<Member> resultList = em.createQuery(jpql, Member.class).getResultList();
+	```
 	- m.username 은 테이블 컬럼명이 아니라 엔티티 객체의 필드명
-	- em.createQuery()에 실행할 JPQL과 반환할 엔티티의 클래스 타입인 Member.class를 넘겨주고 getResultList() 메소드를 실행하면 JPA는 JPQL을 SQL로 변환해서 DB를
+	- em.createQuery()에 
+		- 실행할 JPQL
+		- 반환할 엔티티의 클래스 타입인 Member.class를 넘겨주고
+		- getResultList() 메소드를 실행하면 
+		- JPA는 JPQL을 SQL로 변환해서 DB를 조회함
+		- 조회 결과로 Member.class 엔티티 생성해서 반환
+	- 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg0ODMwMzAzNCw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbLTE0MzkzMTY2NTYsNzMwOTk4MTE2XX0=
 -->
