--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -53,11 +53,18 @@
 	- m.username 은 테이블 컬럼명이 아니라 엔티티 객체의 필드명
 	- em.createQuery()에 
 		- 실행할 JPQL
-		- 반환할 엔티티의 클래스 타입인 Member.class를 넘겨주고
-		- getResultList() 메소드를 실행하면 
-		- JPA는 JPQL을 SQL로 변환해서 DB를 조회함
+		- 반환할 엔티티의 클래스 타입인 Member.class를 넘겨줌
+		- getResultList() 메소드를 실행 
+		- JPA는 JPQL을 SQL로 변환해서 DB를 조회
 		- 조회 결과로 Member.class 엔티티 생성해서 반환
-	- 
+	- 실제 실행된 SQL
+	```
+	select
+		member.id as id,
+		member.age as age,
+		member.team_id as team,
+		membebr.name as
+	```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0MzkzMTY2NTYsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbMTk3OTA3MDE5MCw3MzA5OTgxMTZdfQ==
 -->
