JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -63,8 +63,16 @@
 		member.id as id,
 		member.age as age,
 		member.team_id as team,
-		membebr.name as
+		membebr.name as name
+	from
+		Member member
+	where
+		member.name='kim'
 	```
+		- 실제로는 좀 더 복잡해서 위는 단순화시킨 버전임
+### 10.1.2 Criteria 쿼리 소개
+- 정의 : JPQL을 생성하는 빌더 클래스
+- 장점 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTk3OTA3MDE5MCw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbLTEyNDQ4MTg4MTUsNzMwOTk4MTE2XX0=
 -->
