--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -72,7 +72,12 @@
 		- 실제로는 좀 더 복잡해서 위는 단순화시킨 버전임
 ### 10.1.2 Criteria 쿼리 소개
 - 정의 : JPQL을 생성하는 빌더 클래스
-- 장점 
+- 장점 : 프로그래밍 코드로 JPQL을 작성할 수 있다는 것
+	- ex) query.select(m).where(...)
+- 문자 기반 쿼리의 단점
+	- 런타임 시점까지 오타를 잡지 못함
+	- ex) select m from Membeeee m 처럼 오타가 있어도 컴파일 시에는 잡지 못함
+- 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyNDQ4MTg4MTUsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbLTE4MzczNzEwOTgsNzMwOTk4MTE2XX0=
 -->
